--- a/app/src/main/cpp/opengl_decoder/CMakeLists.txt
+++ b/app/src/main/cpp/opengl_decoder/CMakeLists.txt
@@ -26,14 +26,14 @@ add_library( # Sets the name of the library.
              # Provides a relative path to your source file(s).
              # Associated headers in the same location as their source
              # file are automatically included.
-#        matrixState.c
-#        matrix.c
+        matrixState.c
+        matrix.c
         shaderUtil.c
         opengl_native_lib.c
         decode_buffer.cpp
         decode_buffer.h
-        RenderProgramYUV.h
-        RenderProgramYUV.cpp
+        RenderProgram.cpp
+        RenderProgramImage.cpp
              )
 
 # Searches for a specified prebuilt library and stores the path as a
