重构一下使得编译可以通过

--- a/app/src/main/cpp/opengl_decoder/CMakeLists.txt
+++ b/app/src/main/cpp/opengl_decoder/CMakeLists.txt
@@ -26,8 +26,8 @@ add_library( # Sets the name of the library.
              # Provides a relative path to your source file(s).
              # Associated headers in the same location as their source
              # file are automatically included.
-        matrixState.c
-        matrix.c
+        matrixState.h
+#        matrix.h
         shaderUtil.c
         opengl_native_lib.c
         decode_buffer.cpp
