基本流程将近定型，测试编译通过

--- a/app/src/main/cpp/opengl_decoder/CMakeLists.txt
+++ b/app/src/main/cpp/opengl_decoder/CMakeLists.txt
@@ -28,9 +28,10 @@ add_library( # Sets the name of the library.
              # file are automatically included.
         matrix.h
         matrix.c
+        shaderUtil.h
         shaderUtil.c
-        opengl_native_lib.h
-        opengl_native_lib.cpp
+        OpenGLNativeLib.h
+        OpenGLNativeLib.cpp
         decode_buffer.cpp
         decode_buffer.h
         RenderProgram.cpp
