存个android 使用 native gl的草稿，编译没问题，但是渲染不出来

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,7 +78,7 @@
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
         </activity>
-        <activity android:name="com.opengldecoder.jnibridge.MainActivity">
+        <activity android:name="com.opengldecoder.jnibridge.NativeOpenGLOESRenderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
