1、实现了一个有缺陷的降噪渲染器 2、安卓demo的接口重新改得合理一点

--- a/app/src/main/cpp/opengl_decoder/CMakeLists.txt
+++ b/app/src/main/cpp/opengl_decoder/CMakeLists.txt
@@ -44,6 +44,8 @@ add_library( # Sets the name of the library.
         RenderProgramYUV.cpp
         RenderProgramOESTexture.h
         RenderProgramOESTexture.cpp
+        RenderProgramNoiseReduction.h
+        RenderProgramNoiseReduction.cpp
         Layer.cpp
              )
 
