--- a/app/src/main/cpp/opengl_decoder/CMakeLists.txt
+++ b/app/src/main/cpp/opengl_decoder/CMakeLists.txt
@@ -46,6 +46,8 @@ add_library( # Sets the name of the library.
         RenderProgramOESTexture.cpp
         RenderProgramNoiseReduction.h
         RenderProgramNoiseReduction.cpp
+        RenderProgramDebackground.h
+        RenderProgramDebackground.cpp
         Layer.cpp
              )
 
