把之前导致编译崩溃和运行时崩溃的一些草稿代码处理掉

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -22,7 +22,9 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -save-temps=obj")
 
 ADD_SUBDIRECTORY(src/main/cpp/opengl_decoder)
 ADD_SUBDIRECTORY(src/main/cpp/ffmpeg)
-ADD_SUBDIRECTORY(src/main/cpp/gl_whiteboard)
+
+#暂时注释白板的代码不然编译不过
+#ADD_SUBDIRECTORY(src/main/cpp/gl_whiteboard)
 
 #add_library(log-lib)
 
