--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,7 @@
         <activity android:name="com.book2.Sample8_1.MyActivity"/>
         <activity android:name="com.book2.EntranceActivity"/>
         <activity android:name="com.cjztest.glMyLightModelSimple.LightModelActivity"/>
+        <activity android:name="com.cjztest.glMyLightModelAdvance.LightModelActivity"/>
         <activity android:name="com.mainpage.MainPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
