--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,7 @@
         <activity android:name="com.book2.EntranceActivity"/>
         <activity android:name="com.cjztest.glMyLightModelSimple.LightModelActivity"/>
         <activity android:name="com.cjztest.glMyLightModelAdvance.LightModelActivity"/>
+        <activity android:name="com.cjztest.gldrawlinesByMultiVectors.MainActivity"/>
         <activity android:name="com.mainpage.MainPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
